Fix/domain name bad contrast (#51)
* Add: character-gray

* Fix: domain color

--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -32,7 +32,7 @@
           margin-bottom: 0.2em;
         }
         &.domain {
-          color: gray;
+          color: c.$character-gray;
           font-size: 60%;
         }
       }
